feat:java17->java11にバージョン変更によるコード修正